[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dashpaan"
version = "1.0.0"

description = "Short description of your package"
readme = "README.md"

requires-python = ">=3.0"

authors = [
    { name = "Hesam Jaferi", email = "hesam.jaferi@gmail.com" }
]

license = { file = "LICENSE" }

dependencies = [
    "requests>=2.0"
]
