[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dashpaan"
version = "1.0.7"

description = "A platform for building dynamic, data-driven dashboards and operational interfaces."

readme = "README.md"

requires-python = ">=3.0"

license = { file = "LICENSE" }

authors = [
{ name = "Hesam Jaferi", email = "hesam.jaferi@gmail.com" }
]

keywords = [
"dashboard",
"analytics",
"business intelligence",
"data visualization",
"operations",
"rest api",
"json",
"dynamic ui"
]

classifiers = [
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Developers",
"Intended Audience :: Information Technology",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Topic :: Software Development :: Libraries",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Internet :: WWW/HTTP",
"Topic :: Office/Business"
]

dependencies = [
"requests>=2.31"
]

[project.urls]
Homepage = "https://github.com/dashpaan"
Repository = "https://github.com/dashpaan/dashpaan-pypi"
Issues = "https://github.com/dashpaan/dashpaan-pypi"

[tool.setuptools.packages.find]
where = ["src"]
